--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "runit"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2024"
 
 [dependencies]
 serde = "1.0.219"
 paste = "1.0"
 runit-macros = { path = "./macros" }
+serde_json = "1.0.141"
