--- a/examples/units/Cargo.toml
+++ b/examples/units/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2024"
 
 [dependencies]
 runit = { path = "../../" }
+serde = { version = "1.0.219", features = ["derive"]  }
+serde_json = "1.0.141"
